filled the copy gaps and added more elements to get to an MVP state

--- a/GETTING-STARTED.html
+++ b/GETTING-STARTED.html
@@ -1,149 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Co-op Prototyping kit</title>
-    <meta name="description" content="">
+    <meta name="description" content="An HTML and CSS starter kit for building simple prototypes with Co-op branding">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/getting_started.css">
-  </head>
-  <body>
+</head>
+<body>
     <nav class="skip-nav">
-      <ul>
-        <li><a href="#main" title="Skip to main content">Skip to content</a></li>
-      </ul>
+        <ul>
+            <li><a href="#main" title="Skip to main content">Skip to content</a></li>
+        </ul>
     </nav>
     <div class="app-content">
-      <div class="content-wrapper">
-        <header class="wrap header-main header-design-manual">
-          <a class="coop-logo" aria-label="Homepage" href="index.html">
-            <img src="assets/images/logos/coop-logo.svg" alt="Co-op">
-          </a>
-        </header>
-
-        <main id="main" class="main">
-          <article class="wrap">
-            <header>
-              <div class="row margin-bh">
-                <div class="column large-7">
-                  <h1>Prototyping kit</h1>
-                  <p>
-                    This prototype kit provides a simple way to make
-                    interactive prototypes. These prototypes can be used to
-                    show ideas to people you work with, and to do user
-                    reasearch.
-                  </p>
-
-                  <h2>Getting started</h2>
-                  <p>
-                    You will need a text editor to work with the prototype
-                    kit. We recommend the <a href="https://atom.io">Atom text
-                    editor</a>. It's free and works on both Mac and Windows.
-                  </p>
-                  <p>
-                    <ul>
-                      <li>
-                        <a href="#adding-pages">Adding pages</a>
-                      </li>
-                      <li>
-                        <a href="#templates">Template</a>
-                      </li>
-                      <li>
-                        <a href="#basic-form-examples">Form examples</a>
-                      </li>
-                      <li>
-                        <a href="#publishing-on-the-web">Publishing on the web</a>
-                      </li>
-                      <li>
-                        etc&hellip;
-                      </li>
-                    </ul>
-                  </p>
-
-                  <section>
-                    <h2 id="adding-pages">Adding pages</h2>
-                    <p>
-                      <em>Instructions on adding new pages to the prototype by
-                      copying the template and linking between them</em>
-                    </p>
-                  </section>
-
-                  <section>
-                    <h2 id="templates">Templates</h2>
-                    <p>
-                      There is a <a href="template-one-column.html">one column
-                      template</a> and a <a href="template-two-column.html">
-                      two column template</a> to get you started.
-                    </p>
-                  </section>
-
-                  <section>
-                    <h2 id="basic-form-examples">Form examples</h2>
-                    <p>
-                      <em>Example page elements could be provided here, with an
-                      easy way to copy the source code for using in pages.</em>
-                    </p>
-
-                    <article class="example">
-                      <h3 id="basic-form"><span class="example-heading">Basic form</span></h3>
-                      <form>
-                        <fieldset>
-                          <div class="form-row">
-                            <label for="name">Your full name</label>
-                            <input type="text" id="name">
-                          </div>
-                          <div class="form-row">
-                            <label for="email">Your email address</label>
-                            <input type="email" id="email">
-                          </div>
-                          <div class="form-row">
-                            <a href="#basic-form" class="btn btn-primary">Submit</a>
-                          </div>
-                        </fieldset>
-                      </form>
-                      <form>
-                        <h3><span class="example-heading">Code for this form</span></h3>
-                        <textarea rows="10" cols="50" class="code">
-  &lt;form&gt;
-    &lt;fieldset&gt;
-      &lt;div class=&quot;form-row&quot;&gt;
-        &lt;label for=&quot;name&quot;&gt;Your full name&lt;/label&gt;
-        &lt;input type=&quot;text&quot; id=&quot;name&quot;&gt;
-      &lt;/div&gt;
-      &lt;div class=&quot;form-row&quot;&gt;
-        &lt;label for=&quot;email&quot;&gt;Your email address&lt;/label&gt;
-        &lt;input type=&quot;email&quot; id=&quot;email&quot;&gt;
-      &lt;/div&gt;
-      &lt;div class=&quot;form-row&quot;&gt;
-        &lt;a href=&quot;#basic-form&quot; class=&quot;btn btn-primary&quot;&gt;Submit&lt;/a&gt;
-      &lt;/div&gt;
-    &lt;/fieldset&gt;
-  &lt;/form&gt;
-                        </textarea>
-                      </form>
-                    </article>
-                  </section>
-
-                  <section>
-                    <h2 id="publishing-on-the-web">Publishing on the web</h2>
-                    <p>
-                      <em>Instructions on how to get the prototype onto
-                      <a href="http://www.heroku.com">Heroku</a> will go here.
-                      It should be possible to ship the prototype kit such that
-                      it will work easily on Heroku. Will explore whether we can
-                      use <a href="https://devcenter.heroku.com/articles/dropbox-sync">
-                      Dropbox Sync</a> to make it possible to publish a prototype
-                      online without the need to use the Terminal application.
-                      </em>
-                    </p>
-                  </section>
-              </div>
+        <div class="content-wrapper">
+            <header class="wrap header-main header-design-manual">
+                <a class="coop-logo" aria-label="Homepage" href="index.html">
+                    <img src="assets/images/logos/coop-logo.svg" alt="Co-op">
+                </a>
             </header>
-          </article>
-        </main>
-      </div>
+            <main id="main" class="main">
+                <article class="wrap">
+                    <div class="row margin-bh">
+                        <div class="column large-7">
+                            <h1>Prototyping kit</h1>
+                            <p>This prototype kit provides a simple way to make interactive prototypes. These prototypes can be used to show ideas to people you work with, and to do user reasearch.</p>
+
+                            <p>When using any of the styles or designing content for your prototype remember to refer to the <a href="https://coop-design-manual.herokuapp.com">design manual</a>.</p>
+                            <ul class="list-bare in-page-nav">
+                                <li><a href="#getting-started">Getting started</a></li>
+                                <li><a href="#style-and-code-examples">Style and code examples</a></li>
+                                <li><a href="#custom-styles">Using custom styles</a></li>
+                                <li><a href="#publishing-on-the-web">Publishing on the web</a></li>
+                            </ul>
+                            <section>
+                                <h2 id="getting-started">Getting started</h2>
+                                <p>You will need a text editor to work with the prototype kit. We recommend the <a href="https://atom.io">Atom text editor</a>. It's free and works on both Mac and Windows.</p>
+                                <h3 id="adding-pages">Adding pages</h3>
+                                <p>To get started on your prototype:</p>
+                                <ol>
+                                    <li>Copy and rename one of the <a href="#templates">templates</a> to index.html - this will be your&nbsp;homepage.</li>
+                                    <li>Use the code examples in this page to add content to your template.</li>
+                                    <li>When you need another page, reapeat this process - naming the new page my-other-page.html or whatever you like.</li>
+                                </ol>
+                                <h3>Linking pages</h3>
+                                <p>Pages are linked together with anchor tags. To link index.html to my-other-page.html use <code>&#x3C;a href=&#x22;my-other-page.html&#x22;&#x3E;Link text&#x3C;/a&#x3E;</code> within the content of index.html.</p>
+                                <h3>Linking with buttons</h3>
+                                <p>Pages can be linked with buttons. This might be you can simulate a user completing a series of forms. To do this use: <code>&#x3C;a href=&#x22;my-other-page.html&#x22; class=&#x22;btn btn-primary&#x22;&#x3E;Button text&#x3C;/a&#x3E;</code>.</p>
+                                <h3 id="templates">Templates</h3>
+                                <p>There is a <a href="template-one-column.html">one column template</a> and a <a href="template-two-column.html"> two column template</a> to get you started with some common page layouts. If you want to create your own layouts study the <a href="https://coop-design-manual.herokuapp.com/styles/grid.html">grid page of the design manual</a>.</p>
+                            </section>
+                            <h2 id="style-and-code-examples">Style and code examples</h2>
+                            <section>
+                                <h3 id="basic-typography-examples">Typography</h3>
+                                <p>Headings and paragraphs are the best way to give a page hierarchy. Our headings are:</p>
+                                <h3><span class="example-heading">Example</span> Headings</h3>
+                                <article class="example">
+                                    <div class="example_content">
+                                        <h1>Heading 1</h1>
+                                        <h2>Heading 2</h2>
+                                        <h3>Heading 3</h3>
+                                        <h4>Heading 4</h4>
+                                        <h5>Heading 5</h5>
+                                        <h6>Heading 6</h6>
+                                    </div>
+                                    <h4 class="example-heading">Code for these headings</h4>
+                                    <pre  class="code">
+&#x3C;h1&#x3E;Heading 1&#x3C;/h1&#x3E;
+&#x3C;h2&#x3E;Heading 2&#x3C;/h2&#x3E;
+&#x3C;h3&#x3E;Heading 3&#x3C;/h3&#x3E;
+&#x3C;h4&#x3E;Heading 4&#x3C;/h4&#x3E;
+&#x3C;h5&#x3E;Heading 5&#x3C;/h5&#x3E;
+&#x3C;h6&#x3E;Heading 6&#x3C;/h6&#x3E;
+                                    </pre>
+                                </article>
+                                <h3><span class="example-heading">Example</span> Headings styled to look like other headings</h3>
+                                <article class="example">
+                                    <div class="example_content">
+                                        <h1 class="h6">Heading 1 styled to look like heading 6</h1>
+                                        <h1 class="h5">Heading 1 styled to look like heading 5</h1>
+                                        <h1 class="h4">Heading 1 styled to look like heading 4</h1>
+                                        <h1 class="h3">Heading 1 styled to look like heading 3</h1>
+                                        <h1 class="h2">Heading 1 styled to look like heading 2</h1>
+                                        <h6 class="h1">Heading 6 styled to look like heading 1</h6>
+                                    </div>
+                                    <h4 class="example-heading">Code for these headings</h4>
+                                    <pre class="code">
+&#x3C;h1 class=&#x22;h6&#x22;&#x3E;Heading 1 styled to look like heading 6&#x3C;/h1&#x3E;
+&#x3C;h1 class=&#x22;h5&#x22;&#x3E;Heading 1 styled to look like heading 5&#x3C;/h1&#x3E;
+&#x3C;h1 class=&#x22;h4&#x22;&#x3E;Heading 1 styled to look like heading 4&#x3C;/h1&#x3E;
+&#x3C;h1 class=&#x22;h3&#x22;&#x3E;Heading 1 styled to look like heading 3&#x3C;/h1&#x3E;
+&#x3C;h1 class=&#x22;h2&#x22;&#x3E;Heading 1 styled to look like heading 2&#x3C;/h1&#x3E;
+&#x3C;h6 class=&#x22;h1&#x22;&#x3E;Heading 6 styled to look like heading 1&#x3C;/h6&#x3E;
+                                    </pre>
+                                </article>
+                                <h3><span class="example-heading">Example</span> Paragraphs, links and lists</h3>
+                                <article class="example">
+                                    <div class="example_content">
+                                        <p>paragraph and a <a href="index.html">link to the homepage</a>.</p>
+                                        <p>An unordered list:</p>
+                                        <ul>
+                                            <li>list item</li>
+                                            <li>list item</li>
+                                            <li>list item</li>
+                                        </ul>
+                                        <p>An ordered list:</p>
+                                        <ol>
+                                            <li>Do this first.</li>
+                                            <li>Do this second.</li>
+                                            <li>Do this third.</li>
+                                        </ol>
+                                    </div>
+                                    <h4 class="example-heading">Code for paragraphs, links and lists</h4>
+                                    <pre class="code">
+&#x3C;p&#x3E;paragraph and a &#x3C;a href=&#x22;index.html&#x22;&#x3E;link to the homepage&#x3C;/a&#x3E;.&#x3C;/p&#x3E;
+&#x3C;p&#x3E;An unordered list:&#x3C;/p&#x3E;
+&#x3C;ul&#x3E;
+&#x3C;li&#x3E;list item&#x3C;/li&#x3E;
+&#x3C;li&#x3E;list item&#x3C;/li&#x3E;
+&#x3C;li&#x3E;list item&#x3C;/li&#x3E;
+&#x3C;/ul&#x3E;
+&#x3C;p&#x3E;An ordered list:&#x3C;/p&#x3E;
+&#x3C;ol&#x3E;
+&#x3C;li&#x3E;Do this first.&#x3C;/li&#x3E;
+&#x3C;li&#x3E;Do this second.&#x3C;/li&#x3E;
+&#x3C;li&#x3E;Do this third.&#x3C;/li&#x3E;
+&#x3C;/ol&#x3E;
+                                    </pre>
+                                </article>
+                                <h3><span class="example-heading">Example</span> Buttons</h3>
+                                <article class="example">
+                                    <div class="example_content">
+                                        <p><a href="my-page.html" class="btn btn-primary">Continue</a></p>
+                                        <p><a href="my-page.html" class="btn btn-primary-dark">Save</a></p>
+                                    </div>
+                                    <h4 class="example-heading">Code for buttons</h4>
+                                    <pre class="code">
+&#x3C;a href=&#x22;my-page.html&#x22; class=&#x22;btn btn-primary&#x22;&#x3E;Continue&#x3C;/a&#x3E;
+&#x3C;a href=&#x22;my-page.html&#x22; class=&#x22;btn btn-primary-dark&#x22;&#x3E;Save&#x3C;/a&#x3E;
+                                    </pre>
+                                </article>
+                                <h2 id="basic-form-examples">Form examples</h2>
+                                <h3 id="basic-form"><span class="example-heading">Example</span> Basic form</h3>
+                                <article class="example">
+                                    <div class="example_content">
+                                        <form>
+                                            <fieldset>
+                                                <div class="form-row">
+                                                    <label for="name">Your full name</label>
+                                                    <input type="text" id="name">
+                                                </div>
+                                                <div class="form-row">
+                                                    <label for="email">Your email address</label>
+                                                    <input type="email" id="email">
+                                                </div>
+                                                <div class="form-row">
+                                                    <a href="#basic-form" class="btn btn-primary">Submit</a>
+                                                </div>
+                                            </fieldset>
+                                        </form>
+                                    </div>
+                                    <h4 class="example-heading">Code for this form</h4>
+                                    <pre class="code">
+&lt;form&gt;
+&lt;fieldset&gt;
+  &lt;div class=&quot;form-row&quot;&gt;
+    &lt;label for=&quot;name&quot;&gt;Your full name&lt;/label&gt;
+    &lt;input type=&quot;text&quot; id=&quot;name&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;form-row&quot;&gt;
+    &lt;label for=&quot;email&quot;&gt;Your email address&lt;/label&gt;
+    &lt;input type=&quot;email&quot; id=&quot;email&quot;&gt;
+  &lt;/div&gt;
+  &lt;div class=&quot;form-row&quot;&gt;
+    &lt;a href=&quot;#basic-form&quot; class=&quot;btn btn-primary&quot;&gt;Submit&lt;/a&gt;
+  &lt;/div&gt;
+&lt;/fieldset&gt;
+&lt;/form&gt;
+                                    </pre>
+                                </article>
+                            </section>
+                            <section>
+                                <h2 id="custom-styles">Custom styles</h2>
+                                <p>If you want to add custom CSS to your prototype use the my-style.css file in the stylesheets folder.</p>
+                            </section>
+                            <section>
+                                <h2 id="publishing-on-the-web">Publishing on the web</h2>
+                                <p>We are currently looking at the best way to allow publishing of this prototyping kit to the internet. If this is something you need to do, consider using our more <a href="https://github.com/coopdigital/coop-prototyping-kit">advanced prototyping toolkit</a> or contact <a href="mailto:design@coopdigital.co.uk">design@coopdigital.co.uk</a>.</p>
+                            </section>
+                        </div>
+                    </div>
+                </article>
+            </main>
+        </div>
     </div>
-  </body>
+</body>
 </html>
