--- a/GETTING-STARTED.html
+++ b/GETTING-STARTED.html
@@ -28,7 +28,6 @@
                         <div class="column large-7">
                             <h1>Prototyping kit</h1>
                             <p>This prototype kit provides a simple way to make interactive prototypes. These prototypes can be used to show ideas to people you work with, and to do user reasearch.</p>
-
                             <p>When using any of the styles or designing content for your prototype remember to refer to the <a href="https://coop-design-manual.herokuapp.com">design manual</a>.</p>
                             <ul class="list-bare in-page-nav">
                                 <li><a href="#getting-started">Getting started</a></li>
@@ -39,6 +38,35 @@
                             <section>
                                 <h2 id="getting-started">Getting started</h2>
                                 <p>You will need a text editor to work with the prototype kit. We recommend the <a href="https://atom.io">Atom text editor</a>. It's free and works on both Mac and Windows.</p>
+                                <h3>Introducing Atom</h3>
+                                <p>
+                                    Atom has a useful ‘Get to know Atom’ section when you
+                                    first open it up. It is recommended you read these steps
+                                    to get you set up and familiar working in the Atom
+                                    environment. There are some parts of the setup that
+                                    might be beyond your level, it’s fine to skip through
+                                    these if you don’t feel comfortable with them yet.
+                                    It will not effect your workflow on this project.
+                                    However, it is recommended that you complete the
+                                    ‘Open your project’ tab.
+                                </p>
+                                <h3>Open your project in Atom</h3>
+                                <ol>
+                                  <li>Open Atom.</li>
+                                  <li>Within the right hand tab of Atom, under
+                                    ‘Get to know Atom!’, click on the first tab ‘Open a project’. </li>
+                                  <li>Clicking this opens an accordion with the button ‘Open a project’,
+                                    this button opens up a finder navigator.</li>
+                                  <li>Navigate to the root of your new prototyping project
+                                    (the ‘root’ is the file that holds all your project files).
+                                    Click once on the root file to highlight it and click open.
+                                    For example, if your root file is in your 'Documents' folder you will navigate
+                                    to this file on your system, find your prototyping file and
+                                    click it once to highlight it and click 'Open'.</li>
+                                    <li>This then opens the folder in a new, left-hand pane.</li>
+                                </ol>
+                            </section>
+                            <section>
                                 <h3 id="adding-pages">Adding pages</h3>
                                 <p>To get started on your prototype:</p>
                                 <ol>
