--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
   </head>
   <body>
+
     <nav class="skip-nav">
       <ul>
         <li><a href="#main" title="Skip to main content">Skip to content</a></li>
       </ul>
     </nav>
+
     <div class="app-content">
       <div class="content-wrapper">
+
         <header class="wrap header-main header-design-manual">
           <a class="coop-logo" aria-label="Homepage" href="index.html">
             <img src="assets/images/logos/coop-logo.svg" alt="Co-op">
@@ -24,26 +27,25 @@
 
         <main id="main" class="main">
           <article class="wrap">
-            <header>
               <div class="row margin-bh">
                 <div class="column large-7">
                 <!-- YOUR CONTENT STARTS HERE -->
 
                   <h1>Welcome!</h1>
-                  <p>
-                    This will be the homepage for your protoype. To get started,
-                    read the
-                    <a href="GETTING-STARTED.html">Getting started guide</a>.
-                  </p>
+                  <p> will be the homepage for your protoype. To get started,
+                    read the <a href="GETTING-STARTED.html">Getting started guide</a>.</p>
 
                 <!-- YOUR CONTENT ENDS HERE -->
                 </div>
               </div>
-            </header>
           </article>
         </main>
-        
+
       </div>
     </div>
+    <script src="https://code.jquery.com/jquery-1.12.1.min.js" integrity="sha256-I1nTg78tSrZev3kjvfdM5A5Ak/blglGzlaZANLPDl3I=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/javascript/vendor/jquery-1.12.1.min.js"><\/script>')</script>
+    <script src="assets/javascript/main.js"></script>
   </body>
+
 </html>
