--- a/template-one-column.html
+++ b/template-one-column.html
@@ -41,6 +41,9 @@
             </main>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-1.12.1.min.js" integrity="sha256-I1nTg78tSrZev3kjvfdM5A5Ak/blglGzlaZANLPDl3I=" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="assets/javascript/vendor/jquery-1.12.1.min.js"><\/script>')</script>
+    <script src="assets/javascript/main.js"></script>
 </body>
 
 </html>
