--- a/index.html
+++ b/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Co-op Prototyping kit</title>
+    <title>More Engaged Members</title>
     <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/main.css">
-  </head>
-  <body>
+    <link rel="stylesheet" type="text/css" href="assets/stylesheets/my-style.css">
+</head>
 
+<body>
     <nav class="skip-nav">
-      <ul>
-        <li><a href="#main" title="Skip to main content">Skip to content</a></li>
-      </ul>
+        <ul>
+            <li><a href="#main" title="Skip to main content">Skip to content</a></li>
+        </ul>
     </nav>
-
     <div class="app-content">
-      <div class="content-wrapper">
+        <div class="content-wrapper">
+            <header class="wrap header-main header-design-manual">
+                <a class="coop-logo" aria-label="Homepage" href="index.html">
+                    <img src="assets/images/logos/coop-logo.svg" alt="Co-op">
+                </a>
+            </header>
 
-        <header class="wrap header-main header-design-manual">
-          <a class="coop-logo" aria-label="Homepage" href="index.html">
-            <img src="assets/images/logos/coop-logo.svg" alt="Co-op">
-          </a>
-        </header>
+            <main id="main" class="main">
+                <article class="wrap">
+                    <div class="row margin-bh">
 
-        <main id="main" class="main">
-          <article class="wrap">
-              <div class="row margin-bh">
-                <div class="column large-7">
-                <!-- YOUR CONTENT STARTS HERE -->
+                        <div class="column large-8">
+                            <!-- MAIN COLUMN CONTENT STARTS HERE -->
 
-                  <h1>Welcome!</h1>
-                  <p> will be the homepage for your protoype. To get started,
-                    read the <a href="GETTING-STARTED.html">Getting started guide</a>.</p>
+                            <h1>Welcome to becoming More Engaged with your Co-op Membership</h1>
+                            <p>This is an experiment in using low powered bluetooth beacons to advertise to people.</p>
+                            <ul>
+                                <li>You can register to use your co-op membership card in Android pay</li>
+                                <li>something else</li>
+                                <li>and something else again</li>
+                            </ul>
 
-                <!-- YOUR CONTENT ENDS HERE -->
-                </div>
-              </div>
-          </article>
-        </main>
+                            <!-- MAIN COLUMN CONTENT ENDS HERE -->
+                        </div>
 
-      </div>
+                    </div>
+                </article>
+            </main>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-1.12.1.min.js" integrity="sha256-I1nTg78tSrZev3kjvfdM5A5Ak/blglGzlaZANLPDl3I=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="assets/javascript/vendor/jquery-1.12.1.min.js"><\/script>')</script>
     <script src="assets/javascript/main.js"></script>
-  </body>
+</body>
 
 </html>
